<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="4dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:text="@string/grace_wambui"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center_vertical|center_horizontal"
        android:padding="8dp"
        android:text="@string/_1_1_2023"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:text="@string/_2_hours_ago"
        android:textSize="16sp" />

</RelativeLayout>