<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/dashboard_AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dashboard_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="pin"
            app:menu="@menu/home_menu"
            app:navigationIcon="@drawable/mwanga_logo"
            app:title="Hi AnnaBelle!"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.App.TitleMedium"
            app:titleTextColor="@color/main_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/home_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center_vertical|center_horizontal"
            android:padding="8dp"
            android:text="@string/recent_registrations"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/name"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/date"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/time"
                android:textColor="@color/main_color"
                android:textSize="16sp" />


        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_dashboard_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_registration" />

        <TextView
            android:id="@+id/view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_vertical|center_horizontal"
            android:padding="8dp"
            android:text="@string/view_more"
            android:textColor="@color/main_color"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>