<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.addchild.AddNewChildFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_new_child_AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_new_child_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/navigate_up"
            app:title="@string/add_child"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.App.TitleMedium"
            app:titleTextColor="@color/main_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/child_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/childs_name"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/child_date_of_birth"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/child_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/date_of_birth"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/calendar"
            app:endIconMode="custom"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/child_sex"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@+id/child_date_of_birth"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:cardCornerRadius="4dp"
            app:strokeColor="?attr/colorOutline"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="16dp"
                    android:text="@string/sex"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/cb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Male" />

                <CheckBox
                    android:id="@+id/cb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Female" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/child_delayed_milestones"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@+id/child_sex"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:cardCornerRadius="4dp"
            app:strokeColor="?attr/colorOutline"
            app:strokeWidth="2dp">
            <Spinner
                android:id="@+id/milestones_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:padding="16dp"
                android:entries="@array/milestones_array"
                android:prompt="@string/delayed_milestones"/>
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_above="@id/child_delayed_milestones"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="24dp"
            android:background="@drawable/large_rectangle_bg"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>