<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".dashboard.programs.ProgramsListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/dashboard_AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dashboard_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="pin"
            app:title="@string/children_in_the_program"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.App.TitleMedium"
            app:titleTextColor="@color/main_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/child_sex"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/child_date_of_birth"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:cardCornerRadius="4dp"
                app:strokeColor="?attr/colorOutline"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/programs_list_search_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="16dp"
                        android:text="@string/search"
                        android:textSize="15sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/name"
                android:textColor="@color/main_color"
                android:textSize="20sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/date"
                android:textColor="@color/main_color"
                android:textSize="20sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:text="@string/time"
                android:textColor="@color/main_color"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/programs_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_registration" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>