<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.registration.RegistrationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_new_child_AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_new_child_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:title="@string/registration"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.App.TitleMedium"
            app:titleTextColor="@color/main_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parent_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/parents_name2"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parents_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parent_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/parents_id"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parents_phone_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/parents_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="Parent's Phone Number"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parents_geo_location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/parents_phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="Geo Location"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_of_children"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/parents_geo_location"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/number_of_children"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_bg"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>