<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/child_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Child 1"
        android:textSize="17sp"
        android:fontFamily="@font/ubuntu_regular"
        android:layout_alignParentStart="true"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/child_sex"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/child_number"
        android:elevation="0dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="?attr/colorOutline"
        app:strokeWidth="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="8dp"
            android:backgroundTint="@android:color/transparent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/name_2"
                android:textSize="15sp"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/child_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/name"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="Rarmani Gathogo"
                android:textSize="15sp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/dob"
                android:textSize="15sp"
                android:layout_below="@+id/name"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/child_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/dob"
                android:layout_below="@+id/child_name"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="20-06-2023"
                android:textSize="15sp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@+id/dob"
                android:padding="8dp"
                android:text="@string/sex2"
                android:textSize="15sp"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/child_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/sex"
                android:layout_below="@+id/child_date_of_birth"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="Male"
                android:textSize="15sp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/delayed_milestone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@+id/sex"
                android:padding="8dp"
                android:text="@string/delayed_milestones_2"
                android:textSize="15sp"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/child_delayed_milestone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/delayed_milestone"
                android:layout_below="@+id/child_gender"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="0-3 months"
                android:textSize="15sp"
                android:textColor="@color/main_color"
                android:fontFamily="@font/ubuntu_regular"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>